==> B-ohemian/ESP32drone/esp_drone-pid/components/mpu6050_driver/mpu6050.c <==
#include "mpu6050.h"
#include "pid.h"
#include "imu.h"
#include "esp_log.h"
#include "spl06.h"
#include "altitude.h"
#include "battery.h"
#include "supersconic.h"
#define SCL 1 /*!< I2C SCL pin number  */
#define SDA 2 /*!< I2C SDA pin number  */

uint8_t MPU_Init()
{
	uint8_t res;
	// 初始化ESP32硬件I2C
	// I2C_Init();
	// 等待初始化完成
	// vTaskDelay(200 / portTICK_RATE_MS);
	// 复位MPU6050, 寄存器0x6B bit7写1实现
	MPU_Write_Byte(MPU_PWR_MGMT1_REG, 0x80);
	vTaskDelay(200 / portTICK_RATE_MS);
	// 唤醒MPU6050
	MPU_Write_Byte(MPU_PWR_MGMT1_REG, 0x00);
	// 设置陀螺仪满量程,2000dps
	MPU_Set_Gyro_FSR(3);
	// 设置加速度计满量程范围,+-4g
	MPU_Set_Accel_FSR(1);
	// 设置采样率
	MPU_Set_Rate(200);
	MPU_Write_Byte(MPU_INT_EN_REG, 0X00);	 // 关闭所有中断
	MPU_Write_Byte(MPU_USER_CTRL_REG, 0X00); // I2C主模式关闭
	MPU_Write_Byte(MPU_FIFO_EN_REG, 0X00);	 // 关闭FIFO
	MPU_Write_Byte(MPU_INTBP_CFG_REG, 0X80); // INT引脚低电平有效
	MPU_Read_Byte(MPU_DEVICE_ID_REG, &res);

	// MPU_Read_Byte(0x0d, &res);
	printf("add:%x\n", res);
	if (res == MPU_ADDR) // 器件ID正确
	{
		MPU_Write_Byte(MPU_PWR_MGMT1_REG, 0X01); // 设置CLKSEL,PLL X轴为参考
		MPU_Write_Byte(MPU_PWR_MGMT2_REG, 0X00); // 加速度与陀螺仪都工作
		MPU_Set_Rate(200);						 // 设置采样率为50Hz
												 // printf("add:%x\n",res);
	}
	else
		return 1;

	return 0;
}

uint8_t MPU_Write_Byte(uint8_t reg, uint8_t data)
{
	esp_err_t error;
	// 创建I2C连接，返回连接句柄
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	// 写启动信号
	i2c_master_start(cmd);
	// 广播地址，并说明读写，并等待响应
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_WRITE, 1);
	if (error != ESP_OK)
		return 1;
	// 写需要写入数据的寄存器地址
	error = i2c_master_write_byte(cmd, reg, 1);
	if (error != ESP_OK)
		return 1;
	// 向上一步指定的寄存器写入数据。
	error = i2c_master_write_byte(cmd, data, 1);
	if (error != ESP_OK)
		return 1;
	// 停止
	i2c_master_stop(cmd);
	// 发送数据
	i2c_master_cmd_begin(I2C_NUM_0, cmd, 10 / portTICK_PERIOD_MS);
	// 删除连接
	i2c_cmd_link_delete(cmd);

	return 0;
}

uint8_t MPU_Write_Len(uint8_t reg, uint8_t *data, uint8_t len)
{
	esp_err_t error;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_WRITE, 1);
	if (error != ESP_OK)
		return 1;

	error = i2c_master_write_byte(cmd, reg, 1);
	if (error != ESP_OK)
		return 1;
	// 将缓存区数据写入寄存器
	error = i2c_master_write(cmd, data, len, 1);
	if (error != ESP_OK)
		return 1;

	i2c_master_stop(cmd);

	i2c_master_cmd_begin(I2C_NUM_0, cmd, 10 / portTICK_PERIOD_MS);

	i2c_cmd_link_delete(cmd);

	return 0;
}

uint8_t MPU_Read_Byte(uint8_t reg, uint8_t *res)
{

	esp_err_t error;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	// 地址广播
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_WRITE, 1);
	if (error != ESP_OK)
		return 1;
	// 写将要读取的寄存器地址
	error = i2c_master_write_byte(cmd, reg, 1);
	if (error != ESP_OK)
		return 1;
	// 起始信号
	i2c_master_start(cmd);
	// 广播地址，并说明要读数据
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_READ, 1);
	if (error != ESP_OK)
		return 1;
	// 读上述寄存器数据
	error = i2c_master_read_byte(cmd, res, I2C_MASTER_LAST_NACK);
	if (error != ESP_OK)
		return 1;
	// 停止信号
	i2c_master_stop(cmd);
	// 发送数据
	i2c_master_cmd_begin(I2C_NUM_0, cmd, 10 / portTICK_PERIOD_MS);

	i2c_cmd_link_delete(cmd);
	return 0;
}

uint8_t MPU_Read_Len(uint8_t reg, uint8_t *buf, uint8_t len)
{
	esp_err_t error;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_WRITE, 1);
	if (error != ESP_OK)
		return 1;

	error = i2c_master_write_byte(cmd, reg, 1);
	if (error != ESP_OK)
		return 1;

	i2c_master_start(cmd);
	error = i2c_master_write_byte(cmd, (MPU_ADDR << 1) | I2C_MASTER_READ, 1);
	if (error != ESP_OK)
		return 1;

	error = i2c_master_read(cmd, buf, len, I2C_MASTER_LAST_NACK);
	if (error != ESP_OK)
		return 1;

	i2c_master_stop(cmd);

	i2c_master_cmd_begin(I2C_NUM_0, cmd, 10 / portTICK_PERIOD_MS);

	i2c_cmd_link_delete(cmd);
	return 0;
}
