==> ZekiKai/stm32-software-module/IIC_MPU6050/Core/Src/mpu6050.c <==
#include "mpu6050.h"
#include "math.h"
#include "stdio.h"
#include "string.h"
#define ACCEL_SCALE 16384.0f  // ±2g -> 65536 / 4
#define GYRO_SCALE 16.4f     // ±2000°/s -> 65536 / 4000

uint8_t MPU_Init(void){

	uint8_t *templete_data = 0;
	HAL_StatusTypeDef ret;
    HAL_I2C_Init(mpu_i2c_handlePtr);

    ret = HAL_I2C_IsDeviceReady(mpu_i2c_handlePtr, MPU_WRITE, 1, 100);
    if (ret == HAL_OK){
    	SendMessage(&huart2, "The device is ready \n");
    } else {
    	SendMessage(&huart2, "The device is not ready \n");
    }

    MPU_Write_Byte(MPU_PWR_MGMT1_REG,0X80);	//复位MPU6050

    ret = MPU_Write_Byte(MPU_PWR_MGMT1_REG,0X00);	//Exiting from the Sleeping mode
    if (ret == HAL_OK){
    	SendMessage(&huart2, "Exiting from the Sleep \n");
    } else {
    	SendMessage(&huart2, "Not exiting from the Sleep \n");
    }

    ret = MPU_Set_Gyro_Fsr(3);	//Configuring Accelerometer
    if (ret == HAL_OK){
    	SendMessage(&huart2, "Configuring Accelerometer \n");
    } else {
    	SendMessage(&huart2, "Not Configuring Accelerometer \n");
    }

    ret = MPU_Set_Accel_Fsr(0);	//Configuring Gyroscope
    if (ret == HAL_OK){
    	SendMessage(&huart2, "Configuring Gyroscope \n");
    } else {
    	SendMessage(&huart2, "Not Configuring Gyroscope \n");
    }

    MPU_Set_Rate(50);						//设置采样率--50Hz
    MPU_Write_Byte(MPU_INT_EN_REG,0X00);	//关闭所有中断
    MPU_Write_Byte(MPU_USER_CTRL_REG,0X00);	//I2C主模式关闭
    MPU_Write_Byte(MPU_FIFO_EN_REG,0X00);	//关闭FIFO
    MPU_Write_Byte(MPU_INTBP_CFG_REG,0X80);	//INT引脚低电平有效

    ret = MPU_Read_Byte(MPU_DEVICE_ID_REG, templete_data);
	printf("\r\nMPU6050:0x%2x\r\n", *templete_data);
    if(*templete_data == MPU_ADDR)//器件ID正确
    {
    	MPU_Write_Byte(MPU_PWR_MGMT1_REG,0X01);	//设置CLKSEL--PLL|X轴为参考
    	MPU_Write_Byte(MPU_PWR_MGMT2_REG,0X00);	//加速度与陀螺仪都工作
    } else {
    	return 0;
    }
    return 1;
}

HAL_StatusTypeDef MPU_Write_Len(uint8_t reg,uint8_t len,uint8_t *buf){

	HAL_StatusTypeDef ret;
	ret = HAL_I2C_Mem_Write(mpu_i2c_handlePtr, MPU_WRITE, reg, I2C_MEMADD_SIZE_8BIT, buf, len, 0xfff);
    HAL_Delay(100);

    return ret;
}

HAL_StatusTypeDef MPU_Read_Len(uint8_t reg,uint8_t len,uint8_t *buf){

	HAL_StatusTypeDef ret;
    ret = HAL_I2C_Mem_Read(mpu_i2c_handlePtr, MPU_READ, reg, I2C_MEMADD_SIZE_8BIT, buf, len, 0xfff);
    HAL_Delay(100);

    return ret;
}

HAL_StatusTypeDef MPU_Write_Byte(uint8_t reg,uint8_t data){

	HAL_StatusTypeDef ret;
    unsigned char W_Data=0;
    W_Data = data;
    ret = HAL_I2C_Mem_Write(mpu_i2c_handlePtr, MPU_WRITE, reg, I2C_MEMADD_SIZE_8BIT, &W_Data, 1, 0xfff);
    HAL_Delay(100);

    return ret;
}

HAL_StatusTypeDef MPU_Read_Byte(uint8_t reg,uint8_t *data){

	HAL_StatusTypeDef ret;
    unsigned char R_Data=0;
    ret = HAL_I2C_Mem_Read(mpu_i2c_handlePtr, MPU_READ, reg, I2C_MEMADD_SIZE_8BIT, &R_Data, 1, 0xfff);
    *data = R_Data;
    HAL_Delay(100);

    return ret;
}
